--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-md-12">
                     <div class="block">
                         <h1 class="animated fadeInUp">A Data Analysis <br> &#38; A Data Revision Company</h1>
-                        <p class="animated fadeInUp">Our goal is to give small company's the information they need to succeed. </br> Allowing them to make the best informed decisions</p>
+                        <p class="animated fadeInUp">Our goal is to give small companies the information they need to succeed </br> Allowing them to make the best informed decisions</p>
 
                     </div>
                 </div>
@@ -106,8 +106,8 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-6" style="background-color:rgba(71, 71, 71, 0.911); padding-bottom:20px; box-shadow:2px; border-radius: 25px;">
                     <h2 class="section-subtitle" style="color: white;">WE BELIEVE IN THE IMPORTANCE OF THE SMALL COMPANYS</h2>
-                    <p>Many small company's lack the advantages of having a full time data analysis's on their payroll. Our vision is to use our in house proprietary software to make this affordable.</p>
-                    <p>We use Machine Learning and Deep Learning to extract values insights into your business, but if that was all you probably wouldnt need us. We deep dive personally into every company allowing that human interface allows us to seperate
+                    <p>Many small company's lack the advantages of having fulltime data analysts on their payroll. Our vision is to use our in house proprietary software to make this affordable.</p>
+                    <p>We use Machine Learning and Deep Learning to extract values insights into your business. We deep dive personally into every company giving that human interface that allows us to seperate
                         ourselves from our competitors.</p>
                     <a href="#" class="btn btn-view-works">View Works</a>
                 </div>
