--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-6" style="background-color:rgba(71, 71, 71, 0.911); padding-bottom:20px; box-shadow:2px; border-radius: 25px;">
-                    <h2 class="section-subtitle" style="color: white;">WE BELIEVE IN THE IMPORTANCE OF THE SMALL COMPANYS</h2>
-                    <p>Many small company's lack the advantages of having fulltime data analysts on their payroll. Our vision is to use our in house proprietary software to make this affordable.</p>
+                    <h2 class="section-subtitle" style="color: white;">WE BELIEVE IN THE IMPORTANCE OF THE SMALL COMPANIES</h2>
+                    <p>Many small companies lack the advantages of having fulltime data analysts on their payroll. Our vision is to use our in house proprietary software to make this affordable.</p>
                     <p>We use Machine Learning and Deep Learning to extract values insights into your business. We deep dive personally into every company giving that human interface that allows us to seperate
                         ourselves from our competitors.</p>
                     <a href="#" class="btn btn-view-works">View Works</a>
