--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                                 <i class="ion-ios-location-outline"></i> Halifax, Canada
                             </li>
                             <li>
-                                <i class="ion-ios-email-outline"></i>Email: Current Unavailable
+                                <i class="ion-ios-email-outline"></i>Email: Currently Unavailable
                                 <a> </a>
                             </li>
                             <li>
