--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="reviseCorp.com">Home</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -107,7 +107,7 @@
                 <div class="col-md-6 col-md-offset-6" style="background-color:rgba(71, 71, 71, 0.911); padding-bottom:20px; box-shadow:2px; border-radius: 25px;">
                     <h2 class="section-subtitle" style="color: white;">WE BELIEVE IN THE IMPORTANCE OF THE SMALL COMPANIES</h2>
                     <p>Many small companies lack the advantages of having fulltime data analysts on their payroll. Our vision is to use our in house proprietary software to make this affordable.</p>
-                    <p>We use Machine Learning and Deep Learning to extract values insights into your business. We deep dive personally into every company giving that human interface that allows us to seperate
+                    <p>We use Machine Learning and Deep Learning to extract valuable insights into your business. We deep dive personally into every company giving that human interface that allows us to seperate
                         ourselves from our competitors.</p>
                     <a href="#" class="btn btn-view-works">View Works</a>
                 </div>
