--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							</button>
-                                <a class="navbar-brand" href="index.html">
+                                <a class="navbar-brand" href="revisecorp.com">
                                     <img src="images/logo.png" alt="Logo" style="padding:
                                     8px 1px 9px 0px;">
                                 </a>
