--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							</button>
-                                <a class="navbar-brand" href="revisecorp.com">
+                                <a class="navbar-brand" href="/">
                                     <img src="images/logo.png" alt="Logo" style="padding:
                                     8px 1px 9px 0px;">
                                 </a>
@@ -45,7 +45,7 @@
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="\">Home</a></li>
+                                    <li><a href="/">Home</a></li>
 
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
